mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
tbaMUD 3.59
[Feb 11 2009] - Jamdog
  Fixed a crash bug in count_quests (quest.c) affecting zlist (thanks Fsantin)
[Feb 05 2009] - Jamdog
  Added "set <player> name <newname>", which renames a character, including pfile and index entry
[Feb 01 2009] - Jamdog
  Changed documentation /doc unixshelladminguide to PDF format.
[Jan 31 2009] - Jamdog
  Added room login trig types, to catch players logging in to a particular room
[Jan 29 2009] - Rumble
  Corrected zcheck MAX_OBJ_GOLD_ALLOWED to compare against Val 0, not Val 1. (thanks Tails)
  Created new MAX_OBJ_GOLD_ALLOWED define for zcheck. (thanks Tails)
  Fixed typo in players.c. (thanks Tristen)
[Jan 25 2009] - Rumble
  Added new documentation /doc unixshelladminguide. (thanks Jamdog).
  Added new zone creation limits to prevent misuse of zedit making the MUD unbootable.
[Jan 25 2009] - Jamdog
  Added cases for missing object types in oedit_disp_val1_menu (other, worn, treasure, trash, key, pen, boat)
[Jan 25 2009] - Rumble
  Fixed pardon. (thanks Echos-Ironcastle)
[Jan 24 2009] - Rumble
  Fixed command queue cancelling "--" from cancelling the next command. (thanks Frenze/Ogdin)
  Fixed object timer values from not saving. (thanks Stoneheart)
  Fixed latest GCC warnings in the /utils. (thanks Jamdog)
  Fixed violent area spells so they would not harm group members. (thanks Nhilar)
  Changed usage of qm->nr to GET_MOB_VNUM(qm). (thanks Tails)
[Jan 21 2009] - Jamdog 
  Added trigedit variable %move% to teleport objects.
  Fixed memory leak in generic_complete_quest.
  A bug fix to player attachable scripts.